# starforge-renpy-demo

./: .gitignore  README.md  pyproject.toml
docs/: portfolio-grade.md
game/: characters.rpy  gui.rpy  options.rpy  prose_characters.rpy  screens.rpy  script.rpy
game/chapters/: chapter_flow.rpy
game/combat/: combat_act1_boss_warlord.rpy  combat_act1_boss_writbound.rpy  combat_act1_breach_hymn.rpy  combat_act1_corp_assault.rpy  combat_act1_corp_elite.rpy  combat_act1_corp_patrol.rpy  combat_act1_cult_ambush.rpy  combat_act1_cult_ritual.rpy  combat_act1_glitter_vein.rpy  combat_act1_husk_echo.rpy  combat_act1_husk_swarm.rpy  combat_act1_mine_breach.rpy  combat_act1_prologue_boarding.rpy  combat_act1_raider_ambush.rpy  combat_act1_raider_veterans.rpy  combat_act1_station_justice.rpy  combat_act1_tutorial.rpy
game/dialogue/: act1_ai_citizens_intro.rpy  act1_bee_manifestation.rpy  act1_bonding_elisira.rpy  act1_bonding_jalen.rpy  act1_bonding_nyx.rpy  act1_bonding_rho.rpy  act1_bonding_vesper.rpy  act1_climax_setup.rpy  act1_corporate_conspiracy.rpy  act1_crew_meal.rpy  act1_deep_nyx.rpy  act1_deep_rho.rpy  act1_deep_vesper.rpy  act1_elia_rescue.rpy  act1_first_watch.rpy  act1_forbidden_citizens.rpy  act1_mentor_contact.rpy  act1_naming_scene.rpy  act1_party_split_briefing.rpy  act1_prologue_boarding.rpy  act1_shard_whispers.rpy  act1_souffle_becoming.rpy  act1_trust_breaking_point.rpy
game/python/: auditor_pressure.rpy  bee_protocol.rpy  combat_narrator.rpy  ending_tracker.rpy  (+5 more)
tests/: test_clean_copy.py  test_renpy_static_validation.py
tools/: validate_renpy.py
(+74 files in other folders)
