[project]
name = "starforge-renpy-demo"
version = "0.1.0"
description = "Act 1 Ren'Py source copy for the Starforge narrative demo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vignesh Gopalakrishnan" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
